# rust-htmx

./: .env.dist  .gitignore  Cargo.toml  README.md  Taskfile.yml  docker-compose.yml  index.scss  package-lock.json  package.json  postcss.config.js  tailwind.config.js
assets/css/: main.min.css
migrations/: 20240208073825_init.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: app_state.rs  config.rs  lib.rs  main.rs  router.rs
src/components/: mod.rs  page.rs  sidenav_item.rs
src/components/boards/: board.rs  form.rs  list.rs  mod.rs
src/components/sidenav/: mod.rs
src/components/ui/: button.rs  dropdown.rs  mod.rs  page.rs
src/components/ui/form/: input.rs
src/components/ui/header/: mod.rs
src/components/ui/sidenav/: mod.rs  sidenav_link.rs
src/htmx/boards/: board.rs  create.rs  list.rs  mod.rs
src/icons/: house.rs  mod.rs  user.rs
src/oidc/: error.rs  extractor.rs  middleware.rs  mod.rs
src/router/: htmx.rs  mod.rs  routes.rs  views.rs
src/utils/: mod.rs  renderer.rs
src/views/: backlog.rs  boards.rs  kanban.rs  mod.rs  test.rs
src/views/boards/: board.rs  form.rs  list.rs  mod.rs
templates/: _sidenav.html  _sidenav.scss  backlog.html  index.html  index.scss  kanban.html  page.html
templates/components/board/: form.html  list.html
templates/components/sidenav/: sidenav-link.html  sidenav.html
templates/components/task/: form.html
templates/layout/: page.html
templates/macros/: button.html  form.html  sidenav_link.html
templates/views/: backlog.html  boards.html  kanban.html
