[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"
default-run = "rust-htmx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
axum = "0.7.4"
axum-htmx = "0.5.0"
axum-oidc = "0.2.3"
dotenvy = "0.15.7"
futures-util = "0.3.30"
http = "1.0.0"
leptos = { version = "0.6.5", features = ["nightly", "ssr"] }
maud = { version = "0.26.0", features = ["axum"] }
once_cell = "1.19.0"
openidconnect = { version = "3.4.0", features = [
  "nightly",
  "accept-rfc3339-timestamps",
] }
reqwest = { version = "0.11.24", default-features = false }
serde = "1.0.196"
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tower-sessions = { version = "0.10.1", features = ["axum-core"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
] }
